# pas-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_tests.sh
include/: Util.h
include/backend/: CodeGenerator.h  Instruction.h  Token.h
include/exception/: InvalidOperation.h  MalformedIdentifier.h  SymbolAlreadyInstalled.h  SymbolNotFound.h  SyntaxError.h  TypeMismatch.h  UnknownOperator.h
include/frontend/: Scanner.h  Scope.h  Symbol.h  Syntax.h  Token.h  TokenType.h  Type.h
include/test/: Assertions.h  ScannerTest.h  ScopeTest.h  SyntaxTest.h  TestCase.h  TokenTypeTest.h
relatorios/: TP01-lexico.tex  TP02-sintatico.out  TP02-sintatico.tex  TP02-sintatico.tex.backup  TP03-semantico.out  TP03-semantico.tex
src/: AndExpr.h  Expressions.cpp  Scanner.cpp  Scope.cpp  Statements.cpp  Symbol.cpp  Syntax.cpp  TestCase.cpp  Token.cpp  TokenType.cpp  main.cpp
tests/: test1.psc  test1c.psc  test2.psc  test2c.psc  test2c2.psc  test3.psc  test3c.psc  test3c2.psc  test3c3.psc  test3c4.psc  test3c5.psc  test4.psc  test4c.psc  test4c2.psc  test4c3.psc  test4c4.psc  test5.psc  test5c.psc  test6.psc  test6c.psc  test6c2.psc  test6c3.psc  test6c4.psc  test6c5.psc  test6c6.psc  test7.psc  test7c.psc  test7c2.psc  test7c3.psc  test8.psc  test8c.psc  test8c2.psc  test8c3.psc  test8c4.psc  test9.psc
tests/output/: test1.out  test1c.out  test2.out  test2c.out  test2c2.out  test3.out  test3c.out  test3c2.out  test3c3.out  test3c4.out  test3c5.out  test4.out  test4c.out  test4c2.out  test4c3.out  test4c4.out  test5.out  test5c.out  test6.out  test6c.out  test6c2.out  (+14 more)
(+18 files in other folders)
